# trabalho-mds

./: .gitignore  README.md  env  pyproject.toml
librarymanagement/: settings.py  urls.py
