[tool.poetry]
name = "trabalho-mds"
version = "0.1.0"
description = ""
authors = ["zMarcoos <marcosvdcdef@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asgiref = "^3.8.1"
django = "^5.1.6"
django-widget-tweaks = "1.4.8"
pytz = "2020.1"
sqlparse = "0.3.1"
setuptools = "^75.8.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
